--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ nav {
     align-items: center;
     padding-right: 5%;
     padding-left: 1%;
+    padding-top: 0.5em;
     font-size: 1.3rem;
 }
 
