--- a/styles.css
+++ b/styles.css
@@ -57,8 +57,8 @@ html {
 * {
     box-sizing: border-box;
     /*
-    */
     border: red solid 1px;
+    */
 }
 
 body {
@@ -142,24 +142,58 @@ nav .nav-links a:hover {
     place-items: center;
 }
 
+.screen-plus-container {
+    width: 100vw;
+    min-height: 100vh;
+    overflow: hidden;
+    text-align: center;
+    display: grid;
+    place-items: center;
+}
+
 .content-container {
     width: 100vw;
     overflow: hidden;
     text-align: center;
 }
 
-.animated-box.team-splash {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-4em);
+.team-group {
+    width: 80%;
+    max-width: 1100px;
+    margin: 0 auto;
 }
 
-.animated-box.team-splash img {
-    position: absolute;
+.team-member img {
     width: 8em;
+    border-radius: 50%;
+    border: solid var(--PrimaryButton) 4px;
 }
-.animated-box.team-splash.fade-in img:nth-child(1) {
-    transform: translate(-5em, -2em);
+
+.team-member {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    padding: 1em 1em;
+    border-radius: 10px;
+}
+
+.team-member p {
+    text-align: left;
+}
+
+.team-member:nth-child(2n) p {
+    text-align: right;
+}
+
+.team-member:nth-child(2n) {
+    background-color: var(--Tertiary);
+}
+
+.team-name {
+    color: var(--Accent);
+    text-decoration: underline;
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 600px) {
