--- a/styles.css
+++ b/styles.css
@@ -225,15 +225,16 @@ nav .nav-links a:hover {
 }
 
 .card {
-    width: 40vmin;
+    width: 17.5rem;
     aspect-ratio: 5/7;
-    background: linear-gradient(to right, red, purple);
     padding: 3px;
+    transition: all ease-in-out 100ms;
+    background-color: var(--SecondaryButton);
 }
 
 .card-wrap {
     width: 100%;
-    aspect-ratio: 5/7;
+    height: 100%;
     display:flex;
     flex-direction: column;
     justify-content: space-between;
@@ -241,10 +242,19 @@ nav .nav-links a:hover {
     padding-bottom: 1em;
 }
 
+.card:hover {
+    background: linear-gradient(to right, red, purple);
+    -webkit-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+    -moz-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+    box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+}
+
+
 .card-image {
     width: 100%;
     aspect-ratio: 16/9;
     object-fit: cover;
+    object-position: 50% 50%;
 }
 
 .card-content {
