--- a/styles.css
+++ b/styles.css
@@ -225,11 +225,23 @@ nav .nav-links a:hover {
 }
 
 .card {
+    position: relative;
     width: 17.5rem;
     aspect-ratio: 5/7;
     padding: 3px;
-    transition: all ease-in-out 100ms;
-    background-color: var(--SecondaryButton);
+}
+.card::before {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+    content: "";
+    inset: 0;
+    transition: all ease-in 300ms;
+    background: linear-gradient(to right, purple, var(--Accent));
+    -webkit-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+    -moz-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+    box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+
 }
 
 .card-wrap {
@@ -242,11 +254,8 @@ nav .nav-links a:hover {
     padding-bottom: 1em;
 }
 
-.card:hover {
-    background: linear-gradient(to right, red, purple);
-    -webkit-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
-    -moz-box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
-    box-shadow: 0px 13px 28px 3px rgba(245,245,245,.125);
+.card:hover::before {
+    opacity: 1;
 }
 
 
